# ProductDescriber

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
productdescriber/: generator.py  main.py  ollama_client.py  routes.py  settings.py
static/: style.css
templates/: index.html
tests/: conftest.py  test_main.py
tests/integration/: test_routes.py
tests/unit/: test_generator.py  test_ollama_client.py
